@@ -176,9 +176,20 @@ subprojects {
     group 'com.radixdlt'
     version rootProject.version
 
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'jacoco'
+    apply plugin: 'checkstyle'
+    apply plugin: 'com.adarshr.test-logger'
+
+    checkstyle {
+        toolVersion '9.1'
+    }
+
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
-            options.release = 11
+            options.release = 17
+            options.encoding = "UTF-8"
+            options.compilerArgs << "--enable-preview"
             options.compilerArgs << "-Xlint:all"
 
             //TODO: uncomment once warnings will be cleared
@@ -189,6 +200,10 @@ subprojects {
             options.compilerArgs << "-Xlint:-deprecation"   //TODO: fix code to remove these warnings
             options.compilerArgs << "-Xlint:-unchecked"     //TODO: fix code to remove these warnings
             options.compilerArgs << "-Xlint:-rawtypes"      //TODO: fix code to remove these warnings
+        }
+
+        tasks.withType(Test) {
+            systemProperty "file.encoding", "UTF-8"
         }
 
         tasks.named("checkstyleMain") {
@@ -203,11 +218,6 @@ subprojects {
             exclude "**/openapitools/**/*.java"
         }
     }
-
-    apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'jacoco'
-    apply plugin: 'checkstyle'
-    apply plugin: 'com.adarshr.test-logger'
 
     dependencyManagement {
         overriddenByDependencies = false
